--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -178,6 +178,7 @@
     "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
     "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
+    "/final/assets/images/ciber/1.svg": "/final/assets/images/ciber/1.svg",
     "/final/assets/images/ciber/2.svg": "/final/assets/images/ciber/2.svg",
     "/final/assets/images/ciber/2_1.svg": "/final/assets/images/ciber/2_1.svg",
     "/final/assets/images/ciber/2_2.svg": "/final/assets/images/ciber/2_2.svg",
