tab GC new mayo

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -86,6 +86,8 @@
     "/final/assets/fonts/ce9abbd2222b7882-s.p.woff": "/final/assets/fonts/ce9abbd2222b7882-s.p.woff",
     "/final/assets/fonts/e86cc954d8c82a89-s.p.woff": "/final/assets/fonts/e86cc954d8c82a89-s.p.woff",
     "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff",
+    "/final/assets/images/GC/bg_1.svg": "/final/assets/images/GC/bg_1.svg",
+    "/final/assets/images/GC/bg_2.svg": "/final/assets/images/GC/bg_2.svg",
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
@@ -200,6 +202,7 @@
     "/final/assets/images/img_atencion_1.png": "/final/assets/images/img_atencion_1.png",
     "/final/assets/images/img_atencion_2.png": "/final/assets/images/img_atencion_2.png",
     "/final/assets/images/img_call_center.webp": "/final/assets/images/img_call_center.webp",
+    "/final/assets/images/img_carta.webp": "/final/assets/images/img_carta.webp",
     "/final/assets/images/img_gestion.png": "/final/assets/images/img_gestion.png",
     "/final/assets/images/img_gestion.webp": "/final/assets/images/img_gestion.webp",
     "/final/assets/images/img_gestion2.webp": "/final/assets/images/img_gestion2.webp",
