style: Add CSS styles for new comunicados section
Added CSS styles for the new "comunicados" section in the app.css file. This includes styling for headings (h1, h2, h3) and paragraphs (p) within the ".as__comunicados_info" class.

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -309,6 +309,7 @@
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
     "/final/ciberseguridad/index.html": "/final/ciberseguridad/index.html",
+    "/final/comunicado_1/index.html": "/final/comunicado_1/index.html",
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
     "/final/educacion_financiera/index.html": "/final/educacion_financiera/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
