--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -66,7 +66,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -205,6 +205,7 @@
     "/final/assets/images/img_call_center.webp": "/final/assets/images/img_call_center.webp",
     "/final/assets/images/img_carta.webp": "/final/assets/images/img_carta.webp",
     "/final/assets/images/img_carta_27_may.webp": "/final/assets/images/img_carta_27_may.webp",
+    "/final/assets/images/img_comunucados.webp": "/final/assets/images/img_comunucados.webp",
     "/final/assets/images/img_gestion.png": "/final/assets/images/img_gestion.png",
     "/final/assets/images/img_gestion.webp": "/final/assets/images/img_gestion.webp",
     "/final/assets/images/img_gestion2.webp": "/final/assets/images/img_gestion2.webp",
@@ -275,6 +276,7 @@
     "/final/assets/images/top_calendario.webp": "/final/assets/images/top_calendario.webp",
     "/final/assets/images/top_ciberseguridad.png": "/final/assets/images/top_ciberseguridad.png",
     "/final/assets/images/top_ciberseguridad.webp": "/final/assets/images/top_ciberseguridad.webp",
+    "/final/assets/images/top_comunicado.webp": "/final/assets/images/top_comunicado.webp",
     "/final/assets/images/top_educacion_financiera.png": "/final/assets/images/top_educacion_financiera.png",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
