--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -66,7 +66,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -187,6 +187,7 @@
     "/final/assets/images/ciber/2_2.svg": "/final/assets/images/ciber/2_2.svg",
     "/final/assets/images/ciber/2_3.svg": "/final/assets/images/ciber/2_3.svg",
     "/final/assets/images/ciber/2_4.svg": "/final/assets/images/ciber/2_4.svg",
+    "/final/assets/images/comunicado_img.webp": "/final/assets/images/comunicado_img.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
@@ -217,6 +218,7 @@
     "/final/assets/images/img_guia_3.webp": "/final/assets/images/img_guia_3.webp",
     "/final/assets/images/img_ilus_renta_inv.webp": "/final/assets/images/img_ilus_renta_inv.webp",
     "/final/assets/images/img_ilus_renta_sob.webp": "/final/assets/images/img_ilus_renta_sob.webp",
+    "/final/assets/images/img_mega.webp": "/final/assets/images/img_mega.webp",
     "/final/assets/images/img_nino.webp": "/final/assets/images/img_nino.webp",
     "/final/assets/images/img_novedades_1.png": "/final/assets/images/img_novedades_1.png",
     "/final/assets/images/img_novedades_1.webp": "/final/assets/images/img_novedades_1.webp",
@@ -237,6 +239,7 @@
     "/final/assets/images/img_slider_1-img.png": "/final/assets/images/img_slider_1-img.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
+    "/final/assets/images/img_sup_banner.webp": "/final/assets/images/img_sup_banner.webp",
     "/final/assets/images/img_tab1_ciber.webp": "/final/assets/images/img_tab1_ciber.webp",
     "/final/assets/images/img_tab2_ciber.webp": "/final/assets/images/img_tab2_ciber.webp",
     "/final/assets/images/img_tab3_ciber.webp": "/final/assets/images/img_tab3_ciber.webp",
