--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -195,6 +195,7 @@
     "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
     "/final/assets/images/hqdefault.webp": "/final/assets/images/hqdefault.webp",
+    "/final/assets/images/ico_comunicado_6_junio.webp": "/final/assets/images/ico_comunicado_6_junio.webp",
     "/final/assets/images/icono_carta.webp": "/final/assets/images/icono_carta.webp",
     "/final/assets/images/img-ciber-t1.png": "/final/assets/images/img-ciber-t1.png",
     "/final/assets/images/img-ciber-t2.png": "/final/assets/images/img-ciber-t2.png",
