--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -190,6 +190,9 @@
     "/final/assets/images/comunicado_img.webp": "/final/assets/images/comunicado_img.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
+    "/final/assets/images/firma.png": "/final/assets/images/firma.png",
+    "/final/assets/images/firma_patricia.jpg": "/final/assets/images/firma_patricia.jpg",
+    "/final/assets/images/firma_patricia.png": "/final/assets/images/firma_patricia.png",
     "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
     "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
