--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -69,11 +69,15 @@
     "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
+    "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
+    "/final/assets/documentos/SGC-PO03_Reglamento_Comite_de_Riesgos_v4.pdf": "/final/assets/documentos/SGC-PO03_Reglamento_Comite_de_Riesgos_v4.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
+    "/final/assets/documentos/SGC-PO04_Reglamento_Comite_de_Auditoria_v4.pdf": "/final/assets/documentos/SGC-PO04_Reglamento_Comite_de_Auditoria_v4.pdf",
     "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
     "/final/assets/documentos/SGC-PO08 JD Policy.pdf": "/final/assets/documentos/SGC-PO08 JD Policy.pdf",
     "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf": "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf",
+    "/final/assets/documentos/SGC-PO10_Estatutos_Asulado_v3.pdf": "/final/assets/documentos/SGC-PO10_Estatutos_Asulado_v3.pdf",
     "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
     "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
     "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf",
