--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -69,7 +69,7 @@
     "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
-    "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf",
+    "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/final/assets/documentos/SGC-PO03_Reglamento_Comite_de_Riesgos_v4.pdf": "/final/assets/documentos/SGC-PO03_Reglamento_Comite_de_Riesgos_v4.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
