Update form button selection logic in portal.js and CSS styles for form layout and table formatting

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -317,6 +317,7 @@
     "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
     "/final/assets/js/portal.js": "/final/assets/js/portal.js",
     "/final/assets/js/portal.js.LICENSE.txt": "/final/assets/js/portal.js.LICENSE.txt",
+    "/final/assets/js/test4_1_4.js": "/final/assets/js/test4_1_4.js",
     "/final/assets/sitemap.xml": "/final/assets/sitemap.xml",
     "/final/asulado_te_guia/index.html": "/final/asulado_te_guia/index.html",
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
