--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -210,6 +210,8 @@
     "/final/assets/images/img-ciber-t3.png": "/final/assets/images/img-ciber-t3.png",
     "/final/assets/images/img-ciber-t4.png": "/final/assets/images/img-ciber-t4.png",
     "/final/assets/images/img_anciana.webp": "/final/assets/images/img_anciana.webp",
+    "/final/assets/images/img_articulo_1.webp": "/final/assets/images/img_articulo_1.webp",
+    "/final/assets/images/img_articulo_2.webp": "/final/assets/images/img_articulo_2.webp",
     "/final/assets/images/img_atencion_1.png": "/final/assets/images/img_atencion_1.png",
     "/final/assets/images/img_atencion_2.png": "/final/assets/images/img_atencion_2.png",
     "/final/assets/images/img_call_center.webp": "/final/assets/images/img_call_center.webp",
