asuladot te guia

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -227,6 +227,7 @@
     "/final/assets/images/img_guia_2.webp": "/final/assets/images/img_guia_2.webp",
     "/final/assets/images/img_guia_3.jpg": "/final/assets/images/img_guia_3.jpg",
     "/final/assets/images/img_guia_3.webp": "/final/assets/images/img_guia_3.webp",
+    "/final/assets/images/img_guia_4.jpg": "/final/assets/images/img_guia_4.jpg",
     "/final/assets/images/img_ilus_renta_inv.webp": "/final/assets/images/img_ilus_renta_inv.webp",
     "/final/assets/images/img_ilus_renta_sob.webp": "/final/assets/images/img_ilus_renta_sob.webp",
     "/final/assets/images/img_mega.webp": "/final/assets/images/img_mega.webp",
