Refactor CSS styles for search results table and make it responsive

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -23,6 +23,8 @@
     "/final/PORTAL/4_novedades_4_1.html": "/final/PORTAL/4_novedades_4_1.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
+    "/final/PORTAL/articulo.html": "/final/PORTAL/articulo.html",
+    "/final/PORTAL/artuculo.html": "/final/PORTAL/artuculo.html",
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
     "/final/PORTAL/busqueda_2.html": "/final/PORTAL/busqueda_2.html",
