--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -71,7 +71,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -149,6 +149,7 @@
     "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
     "/final/assets/images/accionistas_2024.png": "/final/assets/images/accionistas_2024.png",
     "/final/assets/images/accionistas_abril_2024.png": "/final/assets/images/accionistas_abril_2024.png",
+    "/final/assets/images/accionistas_julio_2024.png": "/final/assets/images/accionistas_julio_2024.png",
     "/final/assets/images/altag/Alejandra Osorio.png": "/final/assets/images/altag/Alejandra Osorio.png",
     "/final/assets/images/altag/Diana Ramírez.png": "/final/assets/images/altag/Diana Ramírez.png",
     "/final/assets/images/altag/Gustavo Farrera.png": "/final/assets/images/altag/Gustavo Farrera.png",
@@ -188,6 +189,7 @@
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
     "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
+    "/final/assets/images/chart_2024_2.png": "/final/assets/images/chart_2024_2.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
     "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
     "/final/assets/images/ciber/1.svg": "/final/assets/images/ciber/1.svg",
@@ -301,6 +303,7 @@
     "/final/assets/images/top_educacion_financiera.png": "/final/assets/images/top_educacion_financiera.png",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
+    "/final/assets/images/top_interna_guia.webp": "/final/assets/images/top_interna_guia.webp",
     "/final/assets/images/top_new_gobierno.webp": "/final/assets/images/top_new_gobierno.webp",
     "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
     "/final/assets/images/top_nuestra_empresa.webp": "/final/assets/images/top_nuestra_empresa.webp",
