--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -304,6 +304,7 @@
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
     "/final/assets/images/top_interna_guia.webp": "/final/assets/images/top_interna_guia.webp",
+    "/final/assets/images/top_interna_guia_img.webp": "/final/assets/images/top_interna_guia_img.webp",
     "/final/assets/images/top_new_gobierno.webp": "/final/assets/images/top_new_gobierno.webp",
     "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
     "/final/assets/images/top_nuestra_empresa.webp": "/final/assets/images/top_nuestra_empresa.webp",
