Refactor CSS styles for search results table and make it responsive

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -25,6 +25,8 @@
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/articulo.html": "/final/PORTAL/articulo.html",
+    "/final/PORTAL/articulo_1.html": "/final/PORTAL/articulo_1.html",
+    "/final/PORTAL/articulo_2.html": "/final/PORTAL/articulo_2.html",
     "/final/PORTAL/artuculo.html": "/final/PORTAL/artuculo.html",
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
@@ -173,6 +175,10 @@
     "/final/assets/images/banner_3_foto.webp": "/final/assets/images/banner_3_foto.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/blog/a1.jpg": "/final/assets/images/blog/a1.jpg",
+    "/final/assets/images/blog/a2.jpg": "/final/assets/images/blog/a2.jpg",
+    "/final/assets/images/blog/a3.jpg": "/final/assets/images/blog/a3.jpg",
+    "/final/assets/images/blog/a4.jpg": "/final/assets/images/blog/a4.jpg",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
     "/final/assets/images/blog/b1_3.jpg": "/final/assets/images/blog/b1_3.jpg",
