Update image paths in home article and article pages

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -27,6 +27,8 @@
     "/final/PORTAL/articulo.html": "/final/PORTAL/articulo.html",
     "/final/PORTAL/articulo_1.html": "/final/PORTAL/articulo_1.html",
     "/final/PORTAL/articulo_2.html": "/final/PORTAL/articulo_2.html",
+    "/final/PORTAL/articulo_3.html": "/final/PORTAL/articulo_3.html",
+    "/final/PORTAL/articulo_4.html": "/final/PORTAL/articulo_4.html",
     "/final/PORTAL/artuculo.html": "/final/PORTAL/artuculo.html",
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
@@ -175,10 +177,6 @@
     "/final/assets/images/banner_3_foto.webp": "/final/assets/images/banner_3_foto.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
-    "/final/assets/images/blog/a1.jpg": "/final/assets/images/blog/a1.jpg",
-    "/final/assets/images/blog/a2.jpg": "/final/assets/images/blog/a2.jpg",
-    "/final/assets/images/blog/a3.jpg": "/final/assets/images/blog/a3.jpg",
-    "/final/assets/images/blog/a4.jpg": "/final/assets/images/blog/a4.jpg",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
     "/final/assets/images/blog/b1_3.jpg": "/final/assets/images/blog/b1_3.jpg",
@@ -194,6 +192,24 @@
     "/final/assets/images/blog/blog_3.webp": "/final/assets/images/blog/blog_3.webp",
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
+    "/final/assets/images/blog/p_1_1.jpg": "/final/assets/images/blog/p_1_1.jpg",
+    "/final/assets/images/blog/p_1_1.webp": "/final/assets/images/blog/p_1_1.webp",
+    "/final/assets/images/blog/p_1_2.jpg": "/final/assets/images/blog/p_1_2.jpg",
+    "/final/assets/images/blog/p_1_2.webp": "/final/assets/images/blog/p_1_2.webp",
+    "/final/assets/images/blog/p_1_3.jpg": "/final/assets/images/blog/p_1_3.jpg",
+    "/final/assets/images/blog/p_1_3.webp": "/final/assets/images/blog/p_1_3.webp",
+    "/final/assets/images/blog/p_1_4.jpg": "/final/assets/images/blog/p_1_4.jpg",
+    "/final/assets/images/blog/p_1_4.webp": "/final/assets/images/blog/p_1_4.webp",
+    "/final/assets/images/blog/p_2_1.webp": "/final/assets/images/blog/p_2_1.webp",
+    "/final/assets/images/blog/p_2_2.webp": "/final/assets/images/blog/p_2_2.webp",
+    "/final/assets/images/blog/p_2_3.webp": "/final/assets/images/blog/p_2_3.webp",
+    "/final/assets/images/blog/p_3_1.webp": "/final/assets/images/blog/p_3_1.webp",
+    "/final/assets/images/blog/p_3_2.webp": "/final/assets/images/blog/p_3_2.webp",
+    "/final/assets/images/blog/p_3_3.webp": "/final/assets/images/blog/p_3_3.webp",
+    "/final/assets/images/blog/p_4_1.webp": "/final/assets/images/blog/p_4_1.webp",
+    "/final/assets/images/blog/p_4_2.webp": "/final/assets/images/blog/p_4_2.webp",
+    "/final/assets/images/blog/p_4_3.webp": "/final/assets/images/blog/p_4_3.webp",
+    "/final/assets/images/blog/p_4_4.webp": "/final/assets/images/blog/p_4_4.webp",
     "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
     "/final/assets/images/chart_2024_2.png": "/final/assets/images/chart_2024_2.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
