Refactor CSS styles for search results table and make it responsive

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -10,6 +10,7 @@
     "/final/PORTAL/2_certificados_ingreso.html": "/final/PORTAL/2_certificados_ingreso.html",
     "/final/PORTAL/2_certificados_pension.html": "/final/PORTAL/2_certificados_pension.html",
     "/final/PORTAL/3_actualizacion_contacto.html": "/final/PORTAL/3_actualizacion_contacto.html",
+    "/final/PORTAL/3_actualizacion_contacto_2.html": "/final/PORTAL/3_actualizacion_contacto_2.html",
     "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
     "/final/PORTAL/3_actualizacion_documentos.html": "/final/PORTAL/3_actualizacion_documentos.html",
     "/final/PORTAL/4_novedades_1.html": "/final/PORTAL/4_novedades_1.html",
@@ -33,6 +34,7 @@
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
     "/final/PORTAL/busqueda_2.html": "/final/PORTAL/busqueda_2.html",
+    "/final/PORTAL/busqueda_result.html": "/final/PORTAL/busqueda_result.html",
     "/final/PORTAL/calendario.html": "/final/PORTAL/calendario.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
     "/final/PORTAL/error_303.html": "/final/PORTAL/error_303.html",
