chore: Update npm dependencies and add Glide.js library

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,6 +3,7 @@
     "/dist/assets/js/portal.js": "/dist/assets/js/portal.js",
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
+    "/dist/assets/css/glide.core.min.css": "/dist/assets/css/glide.core.min.css",
     "/dist/assets/css/forms.css": "/dist/assets/css/forms.css",
     "/final/404.html": "/final/404.html",
     "/final/PORTAL/2_certificados_colilla.html": "/final/PORTAL/2_certificados_colilla.html",
@@ -59,6 +60,7 @@
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
     "/final/assets/css/forms.css": "/final/assets/css/forms.css",
+    "/final/assets/css/glide.core.min.css": "/final/assets/css/glide.core.min.css",
     "/final/assets/css/portal.css": "/final/assets/css/portal.css",
     "/final/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf": "/final/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf",
     "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
