Refactor CSS styles for search results table and add Glide.js library

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -31,6 +31,8 @@
     "/final/PORTAL/articulo_2.html": "/final/PORTAL/articulo_2.html",
     "/final/PORTAL/articulo_3.html": "/final/PORTAL/articulo_3.html",
     "/final/PORTAL/articulo_4.html": "/final/PORTAL/articulo_4.html",
+    "/final/PORTAL/articulo_5.html": "/final/PORTAL/articulo_5.html",
+    "/final/PORTAL/articulo_6.html": "/final/PORTAL/articulo_6.html",
     "/final/PORTAL/artuculo.html": "/final/PORTAL/artuculo.html",
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
@@ -223,6 +225,12 @@
     "/final/assets/images/blog/p_4_2.webp": "/final/assets/images/blog/p_4_2.webp",
     "/final/assets/images/blog/p_4_3.webp": "/final/assets/images/blog/p_4_3.webp",
     "/final/assets/images/blog/p_4_4.webp": "/final/assets/images/blog/p_4_4.webp",
+    "/final/assets/images/blog/p_5_1.webp": "/final/assets/images/blog/p_5_1.webp",
+    "/final/assets/images/blog/p_5_2.webp": "/final/assets/images/blog/p_5_2.webp",
+    "/final/assets/images/blog/p_5_3.webp": "/final/assets/images/blog/p_5_3.webp",
+    "/final/assets/images/blog/p_6_1.webp": "/final/assets/images/blog/p_6_1.webp",
+    "/final/assets/images/blog/p_6_2.webp": "/final/assets/images/blog/p_6_2.webp",
+    "/final/assets/images/blog/p_6_3.webp": "/final/assets/images/blog/p_6_3.webp",
     "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
     "/final/assets/images/chart_2024_2.png": "/final/assets/images/chart_2024_2.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
