Add new blog banners

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -192,6 +192,12 @@
     "/final/assets/images/banner_3_foto.webp": "/final/assets/images/banner_3_foto.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp",
+    "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
+    "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
+    "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
     "/final/assets/images/blog/b1_3.jpg": "/final/assets/images/blog/b1_3.jpg",
