--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -82,7 +82,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -107,6 +107,7 @@
     "/final/assets/fonts/ce9abbd2222b7882-s.p.woff": "/final/assets/fonts/ce9abbd2222b7882-s.p.woff",
     "/final/assets/fonts/e86cc954d8c82a89-s.p.woff": "/final/assets/fonts/e86cc954d8c82a89-s.p.woff",
     "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff",
+    "/final/assets/images/ASAMBLEA-CARTA_img.webp": "/final/assets/images/ASAMBLEA-CARTA_img.webp",
     "/final/assets/images/GC/bg_1.svg": "/final/assets/images/GC/bg_1.svg",
     "/final/assets/images/GC/bg_2.svg": "/final/assets/images/GC/bg_2.svg",
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
@@ -196,7 +197,7 @@
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
     "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
-    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
     "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
