--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -74,6 +74,7 @@
     "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf": "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
     "/final/assets/documentos/Financial Statements.pdf": "/final/assets/documentos/Financial Statements.pdf",
+    "/final/assets/documentos/GLC-PO06 Reglamento del Comite de etica y Cumplimiento.pdf": "/final/assets/documentos/GLC-PO06 Reglamento del Comite de etica y Cumplimiento.pdf",
     "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/final/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf": "/final/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf",
     "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
@@ -368,6 +369,8 @@
     "/final/assets/images/top_solicitudes.webp": "/final/assets/images/top_solicitudes.webp",
     "/final/assets/images/top_suscribete.png": "/final/assets/images/top_suscribete.png",
     "/final/assets/images/top_suscribete.webp": "/final/assets/images/top_suscribete.webp",
+    "/final/assets/images/video_5.jpg": "/final/assets/images/video_5.jpg",
+    "/final/assets/images/video_6.jpg": "/final/assets/images/video_6.jpg",
     "/final/assets/images/video_thumb_1.jpg": "/final/assets/images/video_thumb_1.jpg",
     "/final/assets/images/video_thumb_1.webp": "/final/assets/images/video_thumb_1.webp",
     "/final/assets/images/video_thumb_2.webp": "/final/assets/images/video_thumb_2.webp",
