chore: Update form layout for responsive design

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -48,6 +48,8 @@
     "/final/PORTAL/error_mantenimiento.html": "/final/PORTAL/error_mantenimiento.html",
     "/final/PORTAL/error_saturado.html": "/final/PORTAL/error_saturado.html",
     "/final/PORTAL/faq.html": "/final/PORTAL/faq.html",
+    "/final/PORTAL/faq_1.html": "/final/PORTAL/faq_1.html",
+    "/final/PORTAL/faq_1_1.html": "/final/PORTAL/faq_1_1.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/loading.html": "/final/PORTAL/loading.html",
