chore: Add tour guide feature to the portal page

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -129,6 +129,7 @@
     "/final/assets/images/PORTAL/b3.png": "/final/assets/images/PORTAL/b3.png",
     "/final/assets/images/PORTAL/banner_home_1.png": "/final/assets/images/PORTAL/banner_home_1.png",
     "/final/assets/images/PORTAL/banner_portal_home_1.png": "/final/assets/images/PORTAL/banner_portal_home_1.png",
+    "/final/assets/images/PORTAL/bienvenida.jpg": "/final/assets/images/PORTAL/bienvenida.jpg",
     "/final/assets/images/PORTAL/colilla_pagos.png": "/final/assets/images/PORTAL/colilla_pagos.png",
     "/final/assets/images/PORTAL/error_303.png": "/final/assets/images/PORTAL/error_303.png",
     "/final/assets/images/PORTAL/error_403.png": "/final/assets/images/PORTAL/error_403.png",
