chore: Update FAQ tabs and documents section in portal

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -50,6 +50,8 @@
     "/final/PORTAL/faq.html": "/final/PORTAL/faq.html",
     "/final/PORTAL/faq_1.html": "/final/PORTAL/faq_1.html",
     "/final/PORTAL/faq_1_1.html": "/final/PORTAL/faq_1_1.html",
+    "/final/PORTAL/faq_2.html": "/final/PORTAL/faq_2.html",
+    "/final/PORTAL/faq_3.html": "/final/PORTAL/faq_3.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/loading.html": "/final/PORTAL/loading.html",
